@@ -14,6 +14,7 @@
 
 package com.google.devtools.build.lib.bazel;
 
+import com.google.common.base.Supplier;
 import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ImmutableMap;
 import com.google.common.collect.ImmutableSet;
@@ -21,6 +22,7 @@ import com.google.common.collect.Maps;
 import com.google.devtools.build.lib.analysis.BlazeDirectories;
 import com.google.devtools.build.lib.analysis.ConfiguredRuleClassProvider;
 import com.google.devtools.build.lib.analysis.RuleDefinition;
+import com.google.devtools.build.lib.analysis.config.BuildConfiguration;
 import com.google.devtools.build.lib.bazel.commands.FetchCommand;
 import com.google.devtools.build.lib.bazel.repository.GitRepositoryFunction;
 import com.google.devtools.build.lib.bazel.repository.HttpArchiveFunction;
@@ -51,6 +53,7 @@ import com.google.devtools.build.lib.bazel.rules.workspace.MavenServerRule;
 import com.google.devtools.build.lib.bazel.rules.workspace.NewGitRepositoryRule;
 import com.google.devtools.build.lib.bazel.rules.workspace.NewHttpArchiveRule;
 import com.google.devtools.build.lib.cmdline.RepositoryName;
+import com.google.devtools.build.lib.events.Event;
 import com.google.devtools.build.lib.pkgcache.PackageCacheOptions;
 import com.google.devtools.build.lib.rules.repository.LocalRepositoryFunction;
 import com.google.devtools.build.lib.rules.repository.LocalRepositoryRule;
@@ -66,29 +69,35 @@ import com.google.devtools.build.lib.runtime.Command;
 import com.google.devtools.build.lib.runtime.CommandEnvironment;
 import com.google.devtools.build.lib.runtime.ServerBuilder;
 import com.google.devtools.build.lib.runtime.WorkspaceBuilder;
+import com.google.devtools.build.lib.runtime.commands.InfoItem;
 import com.google.devtools.build.lib.skyframe.MutableSupplier;
 import com.google.devtools.build.lib.skyframe.PrecomputedValue;
 import com.google.devtools.build.lib.skyframe.PrecomputedValue.Injected;
 import com.google.devtools.build.lib.skyframe.SkyFunctions;
 import com.google.devtools.build.lib.skyframe.SkyValueDirtinessChecker;
+import com.google.devtools.build.lib.util.AbruptExitException;
 import com.google.devtools.build.lib.util.io.TimestampGranularityMonitor;
 import com.google.devtools.build.lib.vfs.FileSystem;
+import com.google.devtools.build.lib.vfs.FileSystemUtils;
 import com.google.devtools.build.lib.vfs.Path;
 import com.google.devtools.build.lib.vfs.PathFragment;
 import com.google.devtools.build.skyframe.SkyKey;
 import com.google.devtools.build.skyframe.SkyValue;
 import com.google.devtools.common.options.OptionsBase;
 import com.google.devtools.common.options.OptionsProvider;
+import java.io.IOException;
 import java.lang.reflect.InvocationTargetException;
+import java.nio.charset.StandardCharsets;
 import java.util.Map;
-import java.util.Map.Entry;
 import java.util.concurrent.atomic.AtomicBoolean;
+import java.util.stream.Collectors;
 import javax.annotation.Nullable;
 
-/**
- * Adds support for fetching external code.
- */
+/** Adds support for fetching external code. */
 public class BazelRepositoryModule extends BlazeModule {
+
+  // Default location (relative to output user root) of the repository cache.
+  public static final String DEFAULT_CACHE_LOCATION = "cache/repos/v1";
 
   // A map of repository handlers that can be looked up by rule class name.
   private final ImmutableMap<String, RepositoryFunction> repositoryHandlers;
@@ -104,21 +113,25 @@ public class BazelRepositoryModule extends BlazeModule {
 
   public BazelRepositoryModule() {
     this.skylarkRepositoryFunction = new SkylarkRepositoryFunction(httpDownloader);
-    this.repositoryHandlers =
-        ImmutableMap.<String, RepositoryFunction>builder()
-            .put(LocalRepositoryRule.NAME, new LocalRepositoryFunction())
-            .put(HttpArchiveRule.NAME, new HttpArchiveFunction(httpDownloader))
-            .put(GitRepositoryRule.NAME, new GitRepositoryFunction(httpDownloader))
-            .put(HttpJarRule.NAME, new HttpJarFunction(httpDownloader))
-            .put(HttpFileRule.NAME, new HttpFileFunction(httpDownloader))
-            .put(MavenJarRule.NAME, new MavenJarFunction(mavenDownloader))
-            .put(NewHttpArchiveRule.NAME, new NewHttpArchiveFunction(httpDownloader))
-            .put(NewGitRepositoryRule.NAME, new NewGitRepositoryFunction(httpDownloader))
-            .put(NewLocalRepositoryRule.NAME, new NewLocalRepositoryFunction())
-            .put(AndroidSdkRepositoryRule.NAME, new AndroidSdkRepositoryFunction())
-            .put(AndroidNdkRepositoryRule.NAME, new AndroidNdkRepositoryFunction())
-            .put(MavenServerRule.NAME, new MavenServerRepositoryFunction())
-            .build();
+    this.repositoryHandlers = repositoryRules(httpDownloader, mavenDownloader);
+  }
+
+  public static ImmutableMap<String, RepositoryFunction> repositoryRules(
+      HttpDownloader httpDownloader, MavenDownloader mavenDownloader) {
+    return ImmutableMap.<String, RepositoryFunction>builder()
+        .put(LocalRepositoryRule.NAME, new LocalRepositoryFunction())
+        .put(HttpArchiveRule.NAME, new HttpArchiveFunction(httpDownloader))
+        .put(GitRepositoryRule.NAME, new GitRepositoryFunction(httpDownloader))
+        .put(HttpJarRule.NAME, new HttpJarFunction(httpDownloader))
+        .put(HttpFileRule.NAME, new HttpFileFunction(httpDownloader))
+        .put(MavenJarRule.NAME, new MavenJarFunction(mavenDownloader))
+        .put(NewHttpArchiveRule.NAME, new NewHttpArchiveFunction(httpDownloader))
+        .put(NewGitRepositoryRule.NAME, new NewGitRepositoryFunction(httpDownloader))
+        .put(NewLocalRepositoryRule.NAME, new NewLocalRepositoryFunction())
+        .put(AndroidSdkRepositoryRule.NAME, new AndroidSdkRepositoryFunction())
+        .put(AndroidNdkRepositoryRule.NAME, new AndroidNdkRepositoryFunction())
+        .put(MavenServerRule.NAME, new MavenServerRepositoryFunction())
+        .build();
   }
 
   /**
@@ -150,9 +163,25 @@ public class BazelRepositoryModule extends BlazeModule {
         }
       };
 
+  private static class RepositoryCacheInfoItem extends InfoItem {
+    private final RepositoryCache repositoryCache;
+
+    RepositoryCacheInfoItem(RepositoryCache repositoryCache) {
+      super("repository_cache", "The location of the repository download cache used");
+      this.repositoryCache = repositoryCache;
+    }
+
+    @Override
+    public byte[] get(Supplier<BuildConfiguration> configurationSupplier, CommandEnvironment env)
+        throws AbruptExitException, InterruptedException {
+      return this.repositoryCache.getRootPath().toString().getBytes(StandardCharsets.UTF_8);
+    }
+  }
+
   @Override
   public void serverInit(OptionsProvider startupOptions, ServerBuilder builder) {
     builder.addCommands(new FetchCommand());
+    builder.addInfoItems(new RepositoryCacheInfoItem(repositoryCache));
   }
 
   @Override
@@ -175,12 +204,14 @@ public class BazelRepositoryModule extends BlazeModule {
 
   @Override
   public void initializeRuleClasses(ConfiguredRuleClassProvider.Builder builder) {
-    for (Entry<String, RepositoryFunction> handler : repositoryHandlers.entrySet()) {
+    for (Map.Entry<String, RepositoryFunction> handler : repositoryHandlers.entrySet()) {
       RuleDefinition ruleDefinition;
       try {
-        ruleDefinition = handler.getValue().getRuleDefinition().getDeclaredConstructor()
-            .newInstance();
-      } catch (IllegalAccessException | InstantiationException | NoSuchMethodException
+        ruleDefinition =
+            handler.getValue().getRuleDefinition().getDeclaredConstructor().newInstance();
+      } catch (IllegalAccessException
+          | InstantiationException
+          | NoSuchMethodException
           | InvocationTargetException e) {
         throw new IllegalStateException(e);
       }
@@ -198,10 +229,47 @@ public class BazelRepositoryModule extends BlazeModule {
     RepositoryOptions repoOptions = env.getOptions().getOptions(RepositoryOptions.class);
     if (repoOptions != null) {
       if (repoOptions.experimentalRepositoryCache != null) {
-        Path repositoryCachePath = filesystem.getPath(repoOptions.experimentalRepositoryCache);
+        Path repositoryCachePath;
+        if (repoOptions.experimentalRepositoryCache.isAbsolute()) {
+          repositoryCachePath = filesystem.getPath(repoOptions.experimentalRepositoryCache);
+        } else {
+          repositoryCachePath =
+              env.getBlazeWorkspace()
+                  .getWorkspace()
+                  .getRelative(repoOptions.experimentalRepositoryCache);
+        }
         repositoryCache.setRepositoryCachePath(repositoryCachePath);
       } else {
-        repositoryCache.setRepositoryCachePath(null);
+        Path repositoryCachePath =
+            env.getDirectories()
+                .getServerDirectories()
+                .getOutputUserRoot()
+                .getRelative(DEFAULT_CACHE_LOCATION);
+        try {
+          FileSystemUtils.createDirectoryAndParents(repositoryCachePath);
+          repositoryCache.setRepositoryCachePath(repositoryCachePath);
+        } catch (IOException e) {
+          env.getReporter()
+              .handle(
+                  Event.warn(
+                      "Failed to set up cache at "
+                          + repositoryCachePath.toString()
+                          + ": "
+                          + e.getMessage()));
+        }
+      }
+
+      if (repoOptions.experimentalDistdir != null) {
+        httpDownloader.setDistdir(
+            repoOptions
+                .experimentalDistdir
+                .stream()
+                .map(
+                    path ->
+                        path.isAbsolute()
+                            ? filesystem.getPath(path)
+                            : env.getBlazeWorkspace().getWorkspace().getRelative(path))
+                .collect(Collectors.toList()));
       }
 
       if (repoOptions.repositoryOverrides != null) {
@@ -222,8 +290,7 @@ public class BazelRepositoryModule extends BlazeModule {
   @Override
   public ImmutableList<Injected> getPrecomputedValues() {
     return ImmutableList.of(
-        PrecomputedValue.injected(
-            RepositoryDelegatorFunction.REPOSITORY_OVERRIDES, overrides));
+        PrecomputedValue.injected(RepositoryDelegatorFunction.REPOSITORY_OVERRIDES, overrides));
   }
 
   @Override
